examples/canary/overlays/test/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary
spec:
  selector:
    matchLabels:
      app: canary-test
  template:
    metadata:
      labels:
        app: canary-test
    spec:
      containers:
      - name: canary
        image: argoproj/rollouts-demo:yellow
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    canary:
      canaryService: canary-test
      steps:
      - setWeight: 100
