examples/canary/overlays/test/deployment.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary
spec:
  template:
    spec:
      containers:
      - name: canary
        image: argoproj/rollouts-demo:blue
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
  strategy: {}
