examples/canary/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: canary
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: canary.dev.argoproj.io
    http:
      paths:
      - path: /
        backend:
          serviceName: canary
          servicePort: 80
